tests/basic/check/eq/120.pan
eq : (a:â„¤) â†’ (b:â„¤) â†’ { c:ğ”¹ | c = true âŸº a = b }
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f120 : unit
f120 = 
  let p = eq 1 2 in 
  assert p

f121 : unit
f121 = 
  let x = 1 in
  let p = eq x 2 in 
  assert p

